# AusTenancy.ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.md  pyproject.toml  requirements.txt
docs/: AGENT_WORKFLOW.md  ARCHITECTURE_DESIGN.md  EVALUATION_IMPLEMENTATION.md  EVALUATION_PLAN.md  LANGSMITH_SETUP.md  PRD.md
src/data_processing/: parser.py
src/evaluation/: run_ragas_eval.py
src/generation/: generator.py
src/retrieval/: vector_store.py
tests/: conftest.py  test_generator.py  test_parser.py  test_vector_store.py
tests/evaluation/: vic_golden_contexts.json  vic_golden_dataset.json
